--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -169,52 +169,33 @@
             </objects>
             <point key="canvasLocation" x="-12" y="1769"/>
         </scene>
-        <scene sceneID="qeL-vJ-cQy">
+        <scene sceneID="wOU-de-fDT">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VMS-JK-6gh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="eOa-LN-KpX" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="lkP-bP-LBf">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g5T-t3-HUE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="HdK-ef-JOy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jxc-Ve-Lfe">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="gMA-KO-YvK"/>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="FbJ-5l-DGs"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1506" y="2189"/>
+            <point key="canvasLocation" x="910" y="1984"/>
         </scene>
-        <scene sceneID="fOc-bV-gx7">
+        <scene sceneID="Uwm-1o-H1f">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rob-K1-Gti" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="ahs-XT-Zn8" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="QiY-5P-dLg">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AHr-wP-Icp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="652-JY-CXO" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zrt-aS-0ln">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="Gio-XK-EHk"/>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="TPj-Q6-B79"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1522" y="948"/>
-        </scene>
-        <scene sceneID="D2d-yd-Muv">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EdL-VX-FIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tabBarController definesPresentationContext="YES" id="rIG-xj-pC1" customClass="ViewController" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="hiU-OC-Prl"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="SxD-1I-Ngn">
-                        <rect key="frame" x="129" y="330" width="163" height="49"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="ahs-XT-Zn8" kind="relationship" relationship="viewControllers" id="xI9-bg-HWb"/>
-                        <segue destination="eOa-LN-KpX" kind="relationship" relationship="viewControllers" id="xlH-ne-ezk"/>
-                    </connections>
-                </tabBarController>
-            </objects>
-            <point key="canvasLocation" x="510" y="1777"/>
+            <point key="canvasLocation" x="910" y="1419"/>
         </scene>
         <scene sceneID="jHY-Sx-w9t">
             <objects>
@@ -398,6 +379,45 @@
         <image name="66-microphone.png" width="12" height="24"/>
         <image name="83-calendar.png" width="23" height="25"/>
     </resources>
+    <classes>
+        <class className="AnnouncementsViewController" superclassName="PullRefreshTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AnnouncementsViewController.h"/>
+        </class>
+        <class className="CalendarViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CalendarViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="CouncilViewController" superclassName="PullRefreshTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CouncilViewController.h"/>
+        </class>
+        <class className="EventsViewController" superclassName="PullRefreshTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventsViewController.h"/>
+        </class>
+        <class className="FeedbackViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FeedbackViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="feedback:"/>
+                <relationship kind="action" name="menutab2:"/>
+                <relationship kind="action" name="playsound:"/>
+                <relationship kind="outlet" name="dayLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="rotationLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="MapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+            </relationships>
+        </class>
+        <class className="PullRefreshTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PullRefreshTableViewController.h"/>
+        </class>
+        <class className="WebsiteViewController" superclassName="PullRefreshTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WebsiteViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
